# opengl_lens_flare

./: CLAUDE.md  CMakeLists.txt  Physically-Based Real-Time Lens Flare Rendering.xml  README.md  opengl_lens_flare.cpp  renderdoc_capture_settings.cap
.claude/: settings.local.json
shaders/: aperture.glsl  ghost_render_fragment.glsl  ghost_render_vertex.glsl  lens_flare.glsl  lens_flare_compute.glsl  starburst.glsl  tonemap.glsl  vertex.glsl
